[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yadiel Perez <yadyopr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pytest = "^8.3.2"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
